# fitflow-agent

./: .env.example  AGENTS.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py  providers.py  service.py
docs/: streamlit-cloud-deployment.md
openspec/changes/build-fitflow-agent-mvp/: design.md  proposal.md  tasks.md
openspec/changes/build-fitflow-agent-mvp/specs/fit-analysis/: spec.md
samples/: candidate_profile.txt  job_posting.txt  sample_output.json
tests/: test_api.py  test_config.py  test_providers.py
ui/: streamlit_app.py
